--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -3,13 +3,13 @@
 
 
 \subsection{Gesetzliche Regelungen}
-Deutschland könnte ein Vorreiter für autonomen Fahren werden, und das daraus resultierende mögliche Potential schnell in den Straßenverkehr bringen.
+Deutschland als Vorreiter in der Automobilindustrie hat ein ganz großes Potential im Segment des autonomen Fahrers.
 
-Am 21. Juni 2017 würde ein Gesetzt erlassen welches autonomes Fahren in gewissen Situationen ermöglicht.
+Am 21. Juni 2017 wurde ein Gesetz erlassen welches autonomes Fahren in gewissen Situationen ermöglicht.
 Im Jahr 2022 möchte Deutschland autonome Kraftfahrzeuge die sich in der Stufe 4 befinden in öffentlichen Straßenverkehr bringen.
 
 Neben technischen Anforderungen, wurde auch die Prüfung zur Erteilung der Betriebserlaubnis überarbeitet.
-Ferner it es nun möglich gewisse Funktionen nachträglich Freizuschalten oder zu deaktivieren.
+Ferner ist es nun möglich gewisse Funktionen nachträglich freizuschalten oder zu deaktivieren.
 % \footnote{https://www.bmvi.de/SharedDocs/DE/Anlage/Gesetze/Gesetze-19/gesetz-aenderung-strassenverkehrsgesetz-pflichtversicherungsgesetz-autonomes-fahren.pdf?__blob=publicationFile}
 
 
@@ -19,9 +19,9 @@ Ferner it es nun möglich gewisse Funktionen nachträglich Freizuschalten oder z
 Bundesministerium für Bildung und Forschung (BMBF) zusammen mit dem
 Bundesministerium für Wirtschaft und Energie (BMWi) und dem
 Bundesministerium für Verkehr und digitale Infrastruktur (BMVI)
-eine Plan für die Forschung am autonomen Fahren beschlossen.
+ein Plan für die Forschung am autonomen Fahren beschlossen.
 
-Dieser Plan soll sich an vielen Punkten orientieren wie unter anderem Sicherheit, Effizienz, Nachhaltigkeit, Barrierefreiheit, Bezahlbarkeit.
+Dieser Plan soll sich an vielen Punkten orientieren wie unter anderem Sicherheit, Effizienz, Nachhaltigkeit, Barrierefreiheit so wie Bezahlbarkeit.
 
 \subsection{Umwelt- und Klimaeffekte}
 Die Umwelt- und Klimaeffekte durch autonomes Fahren ist durch die Vielzahl der Verknüpfungen mit anderen Technologien wie Elektromobilität
@@ -35,9 +35,11 @@ Grundsätzlich werden Klimaeffekte abhängig von:
 	\item der Nachfrage von Nutzern
 \end{itemize}
 
-Im direkten Vergleich von autonomen Fahrzeugen zu konventionellen Fahrzeugen fällt ein geringer der Kraftstoffverbrauch und der geringere Ausstoß Feinstaub auf.
+Im direkten Vergleich von autonomen Fahrzeugen zu konventionellen Fahrzeugen
+fällt ein geringer Kraftstoffverbrauch und ein geringerer Ausstoß von Feinstaub auf.
 
-Andere Faktoren können die Umwelt entlasten wie der Abbau von Fahrzeugbeständen, und die dadurch wegfallenden negativen Einflüsse durch die Produktion von Fahrzeugen.
+Andere Faktoren können die Umwelt entlasten wie der Abbau von Fahrzeugbeständen,
+und die dadurch wegfallenden negativen Einflüsse durch die Produktion von Fahrzeugen.
 
 \subsection{Kraftstoffeinsparungen}
 Kraftstoffeinsparungen durch autonomes Fahren im Straßenverkehr können sich durch
@@ -103,12 +105,15 @@ Die Menge der  Kraftstoffeinsparungen hängt unter anderem von mehreren Faktoren
 	\item die Vernetzung zwischen den Fahrzeugen und der Infrastruktur
 \end{itemize}
 
-\subsubsection{Kraftstoffeinsparungen bei Flottenfahrzeugen}
-Bei Fahrzeugen die in einer Flotte betrieben werden, ist eine intensivere Nutzung der autonomen Fahrzeuge zu erwarten, wodurch sich der Nutzungszeitraum verkürzt.
-Dadurch werden Flottenfahrzeuge früher ausgetauscht und erneuert.
-Durch den schnellen Wechsel der Flottenfahrzeuge werden können modernere Fahrzeuge mit technologischen Erneuerung
-die weniger Luftschadstoffe und Emissionen produzieren schneller in den Einsatz gebracht werden.
-Dies könnte im dicht besiedelten Gebieten zu einer Reduktion von Verkehrsbedingen Luftschadstoffen und Feinstaub führen.
+\subsubsection{Potentiale bei Flottenfahrzeugen}
+Wenn autonome Fahrzeuge in einer Flotte betrieben werden, wäre auch eine intensivere Nutzung der autonomen Fahrzeuge zu erwarten,
+wodurch sich der Nutzungszeitraum verkürzen würde.
+Dies würde dazu führen dass Flottenfahrzeuge früher ausgetauscht und erneuert müssen.
+
+Durch den schnellen Austausch der Flottenfahrzeuge durch modernere Fahrzeuge mit technologischen Erneuerung,
+die weniger Luftschadstoffe und Emissionen produzieren, könnte zu einer Reduktion von verkehrsbedingen Luftschadstoffen und Emissionen führen.
+
+Dies könnte im dicht besiedelten Gebieten zu einer Reduktion von verkehrsbedingen Luftschadstoffen und Feinstaub führen.
 
 \subsection{Positive Umwelteinwirkung durch die Reduktion von Fahrzeugen}
 Positive Umwelteinwirkung durch autonomes Fahren kann durch eine
