--- a/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Bedingungen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Bedingungen.tex
@@ -1,14 +1,15 @@
 
 \section{Umweltbelastung nach Bedingungen}
 Die Umweltbelastung kann stark nach Betriebszuständen variieren.
-So verbraucht ein Fahrzeuge das bergab fährt weniger Kraftstoff und stößt somit auch weniger Luftschadstoffe aus.
-Die Umweltbelastung durch Luftschadstoffe hängt von folgendem ab:
+So verbraucht ein Fahrzeug das bergab fährt weniger Kraftstoff und stößt somit auch weniger Luftschadstoffe aus.
+
+Die Umweltbelastung durch Luftschadstoffe hängt ab von:
 \begin{itemize}
-	\item dem Fahrverhalten des Fahrers, wie dem Beschleunigungsverhalten und der Fahrgeschwindigkeit ab
+	\item dem Fahrverhalten des Fahrers , wie dem Beschleunigungsverhalten und der Fahrgeschwindigkeit
 	\item der Effizienz des Fahrzeugs, je effizienter desto besser
 	\item dem Gewicht des Fahrzeugs, je leichter desto weniger Gewicht muss beschleunigt und gebremst werden
 	\item der Fahrstrecke, fährt das Fahrzeug eine Steigung wird mehr Kraftstoff benötigt
 	\item dem Wetter, je nach Wind wird mehr oder weniger Kraftstoff benötigt
-	\item dem Betriebszustand, wenn sich das Fahrzeug nicht im Betriebszustand befindet wird Energie verwendet um den Betriebszustand zu erreichen
+	\item dem Betriebszustand des Fahrzeuges (wenn sich das Fahrzeug nicht im Betriebszustand befindet wird Energie verwendet um den Betriebszustand zu erreichen)
 \end{itemize}
 
