--- a/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
@@ -59,10 +59,10 @@ Das befahren einer Umweltzone ist dann nur mit einer entsprechenden Kennzeichnun
 
 
 \subsection{Infrastruktur}
-Auch die Infrastruktur belastet die Umwelt, indem:
+Auch die Infrastruktur belastet die Umwelt, afu verschiedene Arten:
 \begin{itemize}
-	\item Wälder abgeholzt werden um die Verkehrsanbindung zu verbessern
-	\item Straßen vergrößert um ein höheres Verkehrsaufkommen zu bewältigen
+	\item Wälder werden abgeholzt um die Verkehrsanbindung zu verbessern
+	\item Straßen werden vergrößert um ein höheres Verkehrsaufkommen zu bewältigen
 	\item starke Erhitzung durch Sonneneinstrahlung auf dunklen Verkehrswegen
-	\item Grünflächen abgeschafft werden um mehr Parkmöglichkeiten zu gewinnen
+	\item Grünflächen werden abgeschafft um mehr Parkmöglichkeiten zu gewinnen
 \end{itemize}
