--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -105,7 +105,7 @@ Die Menge der  Kraftstoffeinsparungen hängt unter anderem von mehreren Faktoren
 	\item die Vernetzung zwischen den Fahrzeugen und der Infrastruktur
 \end{itemize}
 
-\subsubsection{Potentiale bei Flottenfahrzeugen}
+\subsection{Potentiale bei Flottenfahrzeugen}
 Wenn autonome Fahrzeuge in einer Flotte betrieben werden, wäre auch eine intensivere Nutzung der autonomen Fahrzeuge zu erwarten,
 wodurch sich der Nutzungszeitraum verkürzen würde.
 Dies würde dazu führen dass Flottenfahrzeuge früher ausgetauscht und erneuert müssen.
