--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -105,15 +105,13 @@ Die Menge der  Kraftstoffeinsparungen hängt unter anderem von mehreren Faktoren
 	\item die Vernetzung zwischen den Fahrzeugen und der Infrastruktur
 \end{itemize}
 
-\subsection{Potentiale bei Flottenfahrzeugen}
+\subsection{Potential bei Flottenfahrzeugen}
 Wenn autonome Fahrzeuge in einer Flotte betrieben werden, wäre auch eine intensivere Nutzung der autonomen Fahrzeuge zu erwarten,
 wodurch sich der Nutzungszeitraum verkürzen würde.
-Dies würde dazu führen dass Flottenfahrzeuge früher ausgetauscht und erneuert müssen.
+Dies würde dazu führen dass Flottenfahrzeuge früher ausgetauscht und erneuert werden müssen.
 
-Durch den schnellen Austausch der Flottenfahrzeuge durch modernere Fahrzeuge mit technologischen Erneuerung,
+Durch den schnellen Austausch der Flottenfahrzeuge durch modernere Fahrzeuge mit technologischer Erneuerung,
 die weniger Luftschadstoffe und Emissionen produzieren, könnte zu einer Reduktion von verkehrsbedingen Luftschadstoffen und Emissionen führen.
-
-Dies könnte im dicht besiedelten Gebieten zu einer Reduktion von verkehrsbedingen Luftschadstoffen und Feinstaub führen.
 
 \subsection{Positive Umwelteinwirkung durch die Reduktion von Fahrzeugen}
 Positive Umwelteinwirkung durch autonomes Fahren kann durch eine
