--- a/template/Fallstudie/Schluss/Schluss.tex
+++ b/template/Fallstudie/Schluss/Schluss.tex
@@ -7,28 +7,28 @@
 % Im Allgemeinen kann festgehalten werden, dass autonomes Fahren Veränderungen mit sich bringen kann.
 % Wie diese sich diese letztlich zeigen wird hängt von unterschiedlichen Faktoren ab.
 \subsection{Zusammenfassung}
-Durch das voranschreiten des technologischen Vorschritts die Folgen von negativen Umweltbelastungen zunehmend stärker.
-Ein Folge dieser negativen Umweltbelastungen können sich anhand von Luftschadstoffen und Feinstaub bemerkbar machen.
-Die Luftschadstoffe sind gefährlich für Menschen da sie schwere Krankheiten und Tod verursachen können.
+Durch das voranschreiten des technologischen Vorschritts werden die Folgen von negativen Umweltbelastungen zunehmend stärker.
+Eine Folge dieser negativen Umweltbelastungen können sich anhand von Luftschadstoffen und Feinstaub bemerkbar machen.
+Die Luftschadstoffe sind gefährlich für Menschen, da sie schwere Krankheiten und Tod verursachen können.
 Gerade Kraftfahrzeuge tragen einen Teil zu diesen Luftschadstoffen bei.
 
 Kraftfahrzeuge können je nach ihrer Beschaffenheit in verschiedene Klassen eingeteilt werden.
-Neue Technologien könnten helfen die negativen Auswirkungen von Kraftfahrzeugen auf die Umwelt zu reduzieren.
+Neue Technologien könnten dazu beitragen die negativen Auswirkungen von Kraftfahrzeugen auf die Umwelt zu reduzieren.
 Einer dieser neuen Technologien könnte das autonome Fahren sein.
 Auch der Automatisierungsgrad kann in verschiedene Klassen eingeteilt werden.
 
 Da Luftschadstoffe durch die Verbrennung von fossilen Kraftstoffen entstehen,
 können Potentiale im Bereich der Kraftstoffeinsparung und der stetigen Modernisierung von Kraftfahrzeugen erschließen.
 
-Neben den Luftschadstoffen sind aber auch Feinstaub eine negative Belastung.
+Neben den Luftschadstoffen ist auch Feinstaub eine negative Belastung.
 Da Feinstaub nicht nur durch die Verbrennung von fossilen Kraftstoffen entsteht,
 sondern auch durch den Abrieb der Reifen und Bremsen und Produktion von Fahrzeugen,
-Ergeben sich hier Einspareffekte bei der Reduzierung von Fahrten und der Reduktion von Fahrzeugbeständen.
+ergeben sich hier Einspareffekte bei der Reduzierung von Fahrten und der Reduktion von Fahrzeugbeständen.
 
-Aufgrund er hohen Aktualität kann ein eindeutiger Trend noch nicht abgebildet werden.
+Aufgrund der hohen Aktualität kann ein eindeutiger Trend noch nicht abgebildet werden.
 Vielmehr kann die Summe von mehren neuen Technologien und geänderten Verhaltensmuster eine Trendwende schaffen.
 Hierunter könnte Elektromobilität, sowie der Verzicht auf ein eigenes Fahrzeug durch verschiedene
-autonome Mobilitätsdienstleister ene Rolle spielen.
+autonome Mobilitätsdienstleister eine Rolle spielen.
 
 \subsection{Offene Fragen und Themen für weitere Entwicklungen}
 \subsubsection{Wie können Verstöße gegen Verkehrsregeln gewichtet werden?}
