--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -2,18 +2,6 @@
 \input{Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex}
 
 
-\subsection{Gesetzliche Regelungen}
-Deutschland als Vorreiter in der Automobilindustrie hat ein ganz großes Potential im Segment des autonomen Fahrers.
-
-Am 21. Juni 2017 wurde ein Gesetz erlassen welches autonomes Fahren in gewissen Situationen ermöglicht.
-Im Jahr 2022 möchte Deutschland autonome Kraftfahrzeuge die sich in der Stufe 4 befinden in öffentlichen Straßenverkehr bringen.
-
-Neben technischen Anforderungen, wurde auch die Prüfung zur Erteilung der Betriebserlaubnis überarbeitet.
-Ferner ist es nun möglich gewisse Funktionen nachträglich freizuschalten oder zu deaktivieren.
-% \footnote{https://www.bmvi.de/SharedDocs/DE/Anlage/Gesetze/Gesetze-19/gesetz-aenderung-strassenverkehrsgesetz-pflichtversicherungsgesetz-autonomes-fahren.pdf?__blob=publicationFile}
-
-
-
 \section{Erwartungen an autonome Fahrzeuge}
 2019 haben das
 Bundesministerium für Bildung und Forschung (BMBF) zusammen mit dem
@@ -22,6 +10,16 @@ Bundesministerium für Verkehr und digitale Infrastruktur (BMVI)
 ein Plan für die Forschung am autonomen Fahren beschlossen.
 
 Dieser Plan soll sich an vielen Punkten orientieren wie unter anderem Sicherheit, Effizienz, Nachhaltigkeit, Barrierefreiheit so wie Bezahlbarkeit.
+
+\subsection{Gesetzliche Regelungen}
+Deutschland als Vorreiter in der Automobilindustrie hat ein ganz großes Potential im Segment des autonomen Fahrers.
+
+Am 21. Juni 2017 wurde ein Gesetz erlassen welches autonomes Fahren in gewissen Situationen ermöglicht.
+Im Jahr 2022 möchte Deutschland autonome Kraftfahrzeuge die sich in der Stufe 4 befinden in öffentlichen Straßenverkehr bringen.
+
+Neben technischen Anforderungen, wurde auch die Prüfung zur Erteilung der Betriebserlaubnis überarbeitet.
+Ferner ist es nun möglich gewisse Funktionen nachträglich freizuschalten oder zu deaktivieren.
+\cite{gesetztautonomes}
 
 \subsection{Umwelt- und Klimaeffekte}
 Die Umwelt- und Klimaeffekte durch autonomes Fahren ist durch die Vielzahl der Verknüpfungen mit anderen Technologien wie Elektromobilität
@@ -68,9 +66,7 @@ im zweiten Szenario von 0,4 bis 0,8 Millionen Euro.
 
 Rechnet man diese Werte auf einzelne autonome Kraftfahrzeuge um,
 ergäbe dies eine Einsparung für jedes autonome Kraftfahrzeug von 8 bis 16 € pro Jahr.
-\footnote{Fraunhofer-Institut für Arbeitswirtschaft und Organisation IAO, Hochautomatisiertes
-	Fahren auf Autobahnen – Industriepolitische Schlussfolgerungen, Studie im Auftrag des
-	Bundesministeriums für Wirtschaft und Energie, November 2015, S. 264ff.}
+\cite{Fraunhofer}
 
 Eine weitere Einsparung auf Autobahnen durch autonome Fahrzeuge könnte mit
 dem systembedingten verzicht der Überschreitung von Fahrgeschwindigkeiten über der Richtgeschwindigkeit.
@@ -90,9 +86,7 @@ Große Einsparpotentiale bieten hierfür:
 \end{itemize}
 
 Wie die Auswertung internationaler Studien
-\footnote{Milakis, D., van Arem, B., van Wee, B., Policy and society related implications of
-	automated driving: A review of literature and directions for future research, Journal of
-	Intelligent Transportation Systems, 2017, Vol. 21, No. 4, 335f} gezeigt hatsss,
+\cite{Transportation} gezeigt hat,
 können Einsparungen beim Kraftstoffverbrauch von
 bis zu 31 Prozent im städtischen Bereich sowie
 bis zu 45 Prozent bei einer optimierten Knotenpunktsteuerung erreicht werden.
@@ -124,10 +118,7 @@ und vermindern die Notwendigkeit zum Kauf eines Fahrzeugs.
 Verschiedene Studien haben in verschiedenen Szenarien berechnet, ob und wie viele Kraftfahrzeuge sich durch autonome Fahrzeuge zusammenfassen ließen.
 Eine Studie kam zu dem Resultat, dass in etwa 18.000 Flottenfahrzeuge den kompletten Individualverkehr von München innerhalb eines Einzuggebietes decken könnte.
 Dadurch könnte auf ungefähr 200 Tausend Fahrzeuge verzichtet werden.
-\footnote{Alternative Antriebe, Autonomes Fahren,
-	Mobilitätsdienstleistungen: Neue Infrastrukturen für
-	die Verkehrswende im Automobilsektor, S. 42}
-
+\cite{infrastrukturen}
 \newpage
 
 \subsection{Diskussion der Forschungsfrage}
