--- a/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
@@ -1,6 +1,6 @@
 \subsection{Autonomes Fahren}
 Beim autonomen Fahren, fährt ein Kraftfahrzeug Verwaltungsgemäß selbständig.
-Für Kraftfahrzeuge wurden von der \ac{SAE} Institut in der Norm SAE J3016\footnote{SAE J3016\textunderscore202104 - https://www.sae.org/standards/content/j3016\textunderscore202104} Automatisierungsgrade definiert.
+Für Kraftfahrzeuge wurden von der \ac{SAE} Automatisierungsgrade definiert\cite{PRACTICE}.
 \begin{itemize}
 	\item Stufe 0 (Keine Automation)
 	\item Stufe 1 (Assistenzsysteme)
