--- a/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
@@ -1,8 +1,7 @@
 \subsection{Fahrzeugklassen}
 
 Kraftfahrzeuge können Bauartbedingt in Kategorien eingeordnet werden.
-Die EU Kommission hat hierfür acht Klassen definiert\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
-	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}:
+Die EU Kommission hat hierfür acht Klassen definiert\cite{VERORDNUNG}:
 
 \begin{itemize}
 	\item Klasse L: Leichte ein- und zweispurige Kraftfahrzeuge
@@ -18,9 +17,7 @@ Die EU Kommission hat hierfür acht Klassen definiert\footnote{VERORDNUNG (EU) N
 
 Die relevantesten Klassen sind M und N.
 
-\newpage
-
-\subsection{Klasse M}
+\subsection*{Klasse M}
 In der Klasse M werden Kraftfahrerzeuge eingeordnet die für die Beförderung von Personen und Gepäck zuständig sind und mindestens 4 Räder haben sowie eine Hochgeschwindigkeit von über 25 \ac{kmh} haben.
 \newline
 Die Klasse M spaltet sich in 3 Unterklassen auf:
@@ -60,7 +57,7 @@ Kraftfahrzeuge der Klasse M3 haben über die Eigenschaften der Klasse M noch fol
 
 In der Klasse M3 sind Kraftfahrzeuge wie ein Eindecker-Bus über 5 \ac{t} oder Doppeldecker-Bus über 5 \ac{t} zu finden.
 
-\subsection{Klasse N}
+\subsection*{Klasse N}
 In der Klasse N werden Kraftfahrerzeuge eingeordnet die für die Beförderung von Gütern zuständig sind und mindestens 3 Räder haben sowie ein zulässiges Gesamtgewicht von über 1 \ac{t} haben.
 Die Klasse N spaltet sich in 3 Unterklassen auf:
 \begin{itemize}
