--- a/template/packages.tex
+++ b/template/packages.tex
@@ -14,8 +14,8 @@
 \usepackage{xcolor}
 %use fancyhdr to set the header
 \usepackage{fancyhdr}
-%use helvetica font
-\usepackage[]{helvet}
+%use time new roman font
+\usepackage{mathptmx}
 %user hyperref to add links
 \usepackage{hyperref}
 %use graphicx to add images
@@ -24,3 +24,5 @@
 \usepackage{graphicx}
 %use inputenc to set the encoding
 \usepackage[utf8]{inputenc}
+% spacing
+\usepackage[onehalfspacing]{setspace}
