--- a/template/pagestyle.tex
+++ b/template/pagestyle.tex
@@ -9,4 +9,9 @@
 	\renewcommand{\headrulewidth}{0pt}
 	\renewcommand{\footrulewidth}{0pt}
 }
+
 \pagenumbering{arabic}
+
+% \deffootnote{1.4em}{1em}{\footnotemark}
+\deffootnote{1.5em}{1em}{\makebox[1em][l]{\footnotemark}}
+\renewcommand{\footnotesize}{\fontsize{10pt}{12pt}\selectfont}
