--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -107,7 +107,7 @@ Dies würde dazu führen dass Flottenfahrzeuge früher ausgetauscht und erneuert
 Durch den schnellen Austausch der Flottenfahrzeuge durch modernere Fahrzeuge mit technologischer Erneuerung,
 die weniger Luftschadstoffe und Emissionen produzieren, könnte zu einer Reduktion von verkehrsbedingen Luftschadstoffen und Emissionen führen.
 
-\subsection{Positive Umwelteinwirkung durch die Reduktion von Fahrzeugen}
+\subsection{Positive Umwelteinwirkung durch die Reduktion von Kraftfahrerzeugen}
 Positive Umwelteinwirkung durch autonomes Fahren kann durch eine
 Reduktion am Fahrzeugbestand erwartet werden.
 
