--- a/template/abstract.tex
+++ b/template/abstract.tex
@@ -1,1 +1,35 @@
 \chapter*{Abstract}
+Beginnend bei der Produktion, über den Betrieb bis hin zur Entsorgen erzeugen Kraftfahrzeuge 
+negative Auswirkungen im Umwelt.
+Durch Luftschadstoffe und Feinstaub kann es zu schwerwiegenden Krankheiten und Tod kommen.
+
+
+Durch neue technologische Fortschritte wie dem autonomen Fahren können 
+Reduktionen von Luftschadstoffen, 
+Einsparpotenziale beim Kraftstoffverbrauch, 
+schnellerer Durchsatz neuer Technologien
+oder eine Reduktion des Fahrzeugbestandes mit sich bringen.
+
+
+In dieser Arbeit werden Punkte wie 
+wie Kraftfahrzeuge aufgebaut sind und welche Teilsysteme sie beinhalten,
+in welche Stufen von Assistenzsystemen unterschieden wird,
+welche Umweltbelastung durch Kraftfahrzeuge entstehen,
+Erwartungen an autonome Fahrzeuge,
+die aktuelle gesetzliche Lage in Deutschland,
+Einsparpotenziale der Luftschadstoffe durch Reduktion des Kraftstoffverbrauchs auf Autobahnen so wie dem städtischen Verkehr,
+Potentiale bei Flottenfahrzeugen,
+positive Auswirkungen auf die Umwelt durch eine Reduktion von Kraftfahrzeugen,
+untersucht.
+
+
+Das Ziel dieser Arbeit ist es, den Zusammenhang zwischen 
+autonomen Fahrzeugen und einer Verringerung von Feinstaub näher zu untersuchen und
+die Hypothese zu verifizieren.
+
+Aufgrund der hohen Aktualität, kommt diese Arbeit zu dem Ergebnis, 
+dass ein eindeutiger Trend noch nicht abgebildet werden, 
+da hierfür Daten und Langzeitstudien nicht existieren.
+Vielmehr kann die Summe von mehren neuen Technologien und geänderten Verhaltensmuster eine Trendwende schaffen.
+Hierunter könnte Elektromobilität, sowie der Verzicht auf ein eigenes Fahrzeug durch verschiedene
+autonome Mobilitätsdienstleister eine Rolle spielen.
