--- a/template/titlepage.tex
+++ b/template/titlepage.tex
@@ -3,7 +3,7 @@
 \newcommand{\Name}{Julian Türner}
 \newcommand{\Gutachter}{Dr. Herbert Bauer}
 \newcommand{\Matrikelnummer}{581388}
-\newcommand{\Abgabedatum}{09.01.2022}
+\newcommand{\Abgabedatum}{\today}
 
 
 
