--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -1,3 +1,20 @@
+\newpage
+%reset pagestyle to continue with arabic numbering
+\pagestyle{plain}
+%pagenumbering
+\fancypagestyle{plain}{%
+	\fancyhf{} % clear all header and footer fields
+	\fancyhead{} % clear all header fields
+	\fancyfoot{} % clear all footer fields
+	\fancyhead[C]{\textcolor{gray}\thepage}
+	\renewcommand{\headrulewidth}{0pt}
+	\renewcommand{\footrulewidth}{0pt}
+}
+
+\pagenumbering{Roman}
+
+\setcounter{page}{3}
+
 \section*{\fontsize{20}{0} \selectfont Abkürzungsverzeichnis}
 \begin{acronym}[]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
 	\acro{SAE}{\textit{Society of Automotive Engineers}}
@@ -10,3 +27,4 @@
 
 \end{acronym}
 \addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}
+\newpage
